# automl_tool

./: .gitignore  MANIFEST.in  README.html  README.md  automl.py  estimation.py  plotting.py  preprocessing.py  pyproject.toml  test_nb.ipynb
.github/workflows/: ci.yml
automl_tool/: __init__.py  automl.py  plotting.py
eval/: eval_pipeline.py
misc/: compare_automl_prophet_sktime.ipynb
misc/output_data/: automl_performance.csv  combined_performance.csv  prophet_performance.csv  sktime_performance.csv
src/automl_tool/: automl.py  estimation.py  plotting.py  preprocessing.py
src/automl_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/integration/: conftest.py  test_additional.py  test_integration.py  test_integration_additional.py  test_visual_artifacts.py
