[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "automl_tool"
version = "0.1"
authors = [
  { name="Andrew J. Carr", email="andrewcarr24@github.com" },
]
description = "Tool for performing auto ML."
readme = "README.md"
requires-python = "<=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/andrewcarr24/automl_tool"