[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "automl_tool"
version = "0.1.0"
authors = [
  { name = "Andrew J. Carr", email = "andrewcarr24@github.com" },
]
description = "Tool for performing auto ML."
readme = "README.md"
requires-python = ">=3.6, <3.12"
license = { text = "MIT License" }
keywords = ["autoML", "machine learning", "data science"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pandas>=1.0",
    "numpy>=1.18",
    "scikit-learn>=0.24,<=1.5.1",
    "shap>=0.39",
    "seaborn>=0.11",
    "matplotlib>=3.3",
    "xgboost>=1.3",
    "opinionated",
    "ipywidgets"
]

[project.urls]
Homepage = "https://github.com/andrewcarr24/automl_tool"